--- a/scss/header.scss
+++ b/scss/header.scss
@@ -559,8 +559,8 @@
   }
 
   @include responsive767 {
-    width: 13px;
-    height: 13px;
+    width: 16px;
+    height: 16px;
   }
 }
 
